Fixes on slider jump

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ Author: Brindle Digital
 Author URI: https://www.brindledigital.com/
 GitHub Theme URI: https://github.com/sarahbrindle/brindle-tierra-2024
 GitHub Branch:    master
-Version: v1.0.0.12
-Date:            17-01-2024
+Version: v1.0.0.13
+Date:            26-04-2024
 Requires at least: 5.0
 Tested up to: 5.7
 Requires PHP: 7.0
@@ -920,7 +920,7 @@ max-width: 390px;
   max-width: 681px;
   min-height: 90px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
   gap: 20px;
@@ -936,12 +936,22 @@ max-width: 390px;
   margin: 0 0 0;
 }
 
+@media(min-width:1201px) {
+  .module-slider-1 article h4 {
+    min-height: 53px;
+    display: inline-flex;
+    align-items: center;
+  }
+}
+
 .module-slider-1 .slider-nav {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   gap: 25px;
+  flex-shrink: 0;
+  min-width: 117px;
 }
 
 .module-slider-1 .slider-nav button {
@@ -2105,4 +2115,12 @@ body .form-landing .gform-theme--framework .gfield:where(:not(.gfield--type-html
     padding-left: 100px;
     padding-right: 100px;
   }
+}
+
+.slider.slick-slider {
+  transition: none!important;
+}
+
+.slick-slider .slick-list, .slick-slider .slick-track {
+  transition: none;
 }
